deploy/db-neo4j-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db-neo4j
  name: db-neo4j
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-neo4j
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
      labels:
        app: db-neo4j
    spec:
      containers:
        - env:
            - name: NEO4J_AUTH
              value: neo4j/password
          image: neo4j:latest
          resources:
            requests:
              memory: "2Gi"
            limits:
              memory: "4Gi"
          name: db-neo4j
          ports:
            - containerPort: 7474
              hostPort: 7474
              protocol: TCP
            - containerPort: 7687
              hostPort: 7687
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: neo4j-data
            - mountPath: /logs
              name: neo4j-logs
      restartPolicy: Always
      volumes:
        - name: neo4j-data
          persistentVolumeClaim:
            claimName: neo4j-data-pvc
        - name: neo4j-logs
          persistentVolumeClaim:
            claimName: neo4j-logs-pvc

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: db-neo4j
  name: db-neo4j-service
spec:
  ports:
    - name: "7474"
      port: 7474
      targetPort: 7474
    - name: "7687"
      port: 7687
      targetPort: 7687
  selector:
    app: db-neo4j

# deploy/db-neo4j-deployment.yaml
