deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/enable-websocket: "true"
    nginx.org/websocket-services: "frontend-app-svc"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/hsts: "true"

spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - "api.mediaapp.local"
    - "app.mediaapp.local"
    secretName: mediaapp-local-certs
  rules:
  - host: "api.mediaapp.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app-svc
            port:
              number: 8000
  - host: "app.mediaapp.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-app-svc
            port:
              number: 3000

# deploy/ingress.yaml
